[project]
name = "milan-nodes-comfyui"
description = "NODES: 'Load One Image with Name, Title, Description', 'Load Multiple Images with Name, Directory, Title, Description'"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/matorzhin/milan-nodes-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "milan-nodes-comfyui"
Icon = ""
